--- a/package.json
+++ b/package.json
@@ -26,5 +26,12 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "@types/yargs": "^17.0.34",
+    "@types/yargs-parser": "^21.0.3",
+    "nanoid": "^4.0.2",
+    "yargs": "^17.7.2",
+    "zod": "^4.1.12"
   }
 }
